# CSVtoFIRESTORE

./: Makefile  Readme.md  pyproject.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
docs/: CHECK.MD
src/: playground.py
src/assets/lang/: ui_labels.toml
src/page/: config_json.py  home.py  tarefa_1.py  tarefa_2.py  tarefa_3.py  tarefa_4.py  tarefa_5.py
src/utils/: export_csv.py  load.py
